// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blank text on widget, should be null 1`] = `null`;

exports[`Text widget: Contains html Render widget 1`] = `
<div
  className="survey-section__text"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<br> bold text</br>blabla",
      }
    }
  />
</div>
`;

exports[`Text widget: Default values Render widget 1`] = `
<div
  className="survey-section__text"
>
  <div
    className="left "
  >
    <p>
      random text
    </p>
  </div>
</div>
`;

exports[`Text widget: No html Render widget 1`] = `
<div
  className="survey-section__text"
>
  <div
    className="left "
  >
    <p>
      &lt;br&gt;
      text not to be in bold
      &lt;/br&gt;
      other
    </p>
  </div>
</div>
`;

exports[`Text widget: No html, with classes and alignment Render widget 1`] = `
<div
  className="survey-section__text"
>
  <div
    className="right my-class"
  >
    <p>
      random text
    </p>
  </div>
</div>
`;

exports[`Widget invisible, should be null 1`] = `null`;
